# factorline

FactorModeling-demo plat/: app.py  config.py  database_manager.py  error_handler.py  memory_optimizer.py  operations.py  performance_monitor.py  portfolio_analyzer.py  portfolio_constructer.py  pyproject.toml  replit.md  single_portfolio_analyzer.py  single_portfolio_simulation.py  technical_features.py
FactorModeling-demo plat/pages/: 1_≡ƒôè_Data_Management.py  2_≡ƒô¥_Factor_Analysis_Notebook.py  3_≡ƒñû_LLM_Feature_Generator.py  4_≡ƒôé_Simulation_Results.py  5_≡ƒôê_Market_&_Economic_Dashboard.py
FactorModeling-demo plat/reference/: dataset_columns.json  feature_snippets.json
FactorModeling-demo plat/saved_simulations/: 2025-07-09_144246.json  2025-07-09_144508.json  2025-07-09_144806.json  2025-07-09_145100.json  2025-07-09_145342.json  2025-07-09_145643.json  2025-07-09_145917.json  2025-07-09_150617.json  2025-07-09_171330.json
FactorModeling-demo plat/styles/: __init__.py  design_system.py
FactorModeling-demo plat/utils/: openai_helpers.py  simulation_storage.py  streamlit_helpers.py
