[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=1.24.0,<2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.1.0,<2.3.0",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "scipy==1.11.4",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.5",
    "streamlit>=1.46.1",
    "openai>=1.30.1",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]
